# pyindus

./: .gitignore  README.md  pyproject.toml
src/pyindus/: __init__.py  auth.py  chat.py  cli.py  client.py  exceptions.py  models.py
tests/: test_auth.py  test_chat.py  test_client.py  test_live.py  test_models.py
