[project]
name = "pyindus"
version = "0.1.0"
description = "Python package for Indus Chat API by Sarvam AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Verma"},
]
keywords = ["indus", "sarvam", "chatbot", "ai", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pyindus = "pyindus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyindus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: marks tests that require live API access (deselect with '-m \"not live\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
]
